  gpsd will retry ntrip:// and tcp:// connections
  cgps can expand to show more sats.
  maidenhead() checks for input errors.
  Better SHM logs.
  PPS and TOFF JSON now include shm used, and real precision.
  Add initial, untested, TSIPv1 support
  split debug messages into different syslog() levels.
  New ppscheck options, and can use /dev/ppsX devices.

3.23.1: 2021-09-21
  Improve ubx cycle detection.
  Add quirks for Jackson Labs nonstandard NMEA
  Change STATUS_NO_FIX to STATUS_UNK to avoid confusion with fix mode.
  Change STATUS_FIX to STATUS_GPS to avoid confusion with fix mode.
  Change STATUS_DGPS_FIX to STATUS_DGPS to avoid confusion with fix mode.
  Split SOURCE_ACM from SOURCE_USB.  ACM has no speeds.
  Add speeds 1 mbps, 1.152 mbps, 1.5 mbps, and higher.  When libc supports them.
  Improve autobaud.
  Add new u-blox M10 messages.
  Fix u-blox M6, M7 initialization issues.
  Various ubxtool and gpxlogger updates.
  Add mtk3301_speed_switcher()
  No API changes, except for STATUS_* as above.
  No ABI changes.
  Fallback to "python3" if "python" not found.

3.23: 2021-08-06
  doc/*xml all moved into www/internals.adoc
  Convert all DocBook (.xml) to AsciiDoctor (.adoc)
  Remove all XSL remnants.
  gpsplot: speedup, add new options.
  driver_ubx.c: Add decode for UBX-NAV-STATUS
  gps/ubx.py: Improve decode for UBX-NAV-STATUS
  cgps: Add popup help, interactive options.
  Reorganize and split the man pages.
  Small updates for u-blox M8 and M10
  Deprecated mtk3331 and ashtech build options.  Use nmea0183 instead.
  gpssnmp: Move from contrib/ to clients, add manpage
  Add www/gpsd-client-example-code.adoc
  Add gpsdebuginfo script and man page.
  ubxtool: Add BeiDou, Galileo, GLONASS, QZSS, and partial SBAS subframe decodes
  Max serial port speed raised to 921,600.
  SUBFRAME JSON now includes new fields to support multiple constellations.
  gpsd: Add some ADR and UDR message partial decodes.
  ubxtool: Add some ADR and UDR message polls and decodes.